@@ -206,6 +206,10 @@
  DUBLIN_ADJ: "Dubliner"
  DONEGAL: "Donegal"
  DONEGAL_ADJ: "Donegallian"
+ BREGA: "Brega"
+ BREGA_ADJ: "Bregan"
+ LECAN: "Lecan"
+ LECAN_ADJ: "Lecanian"
  CHYZANI: "Chyzani"
  CHYZANI_ADJ: "Chyzan"
  LINONI: "Linoni"
