@@ -206,6 +206,10 @@
  DUBLIN_ADJ: "Dublinisch"
  DONEGAL: "Donegal"
  DONEGAL_ADJ: "Donegallisch"
+ BREGA: "Brega"
+ BREGA_ADJ: "Breganisch"
+ LECAN: "Lecan"
+ LECAN_ADJ: "Lecanisch"
  CHYZANI: "Ranen"
  CHYZANI_ADJ: "Ranisch"
  LINONI: "Linonen"
