@@ -9,8 +9,9 @@
 -Fixed oversight that made ending Fragmentation of Poland unfairly difficult
 -Made the decision to reform Poland slightly easier
 -Extended Salzburg's mission tree (contribution by FrenchKnight)
--Tuscany can no longer collapse if a subject
+-Tuscany can no longer collapse if they are a subject
 -Fixed Piedmont's formation decision
+-Breagha and Leacain's English names now properly show
 -Other small localization fixes
 
 # v 2.0.4 #
